Fixed image box shadows being cut off to the left and right of the content

--- a/src/page/style.css
+++ b/src/page/style.css
@@ -54,14 +54,14 @@ header {
 .mainContent {
     display: grid;
     grid-template-columns: minmax(var(--navBarWidth), var(--navBarWidth)) auto;
-    gap: 2rem;
     max-width: var(--maxContentWidth);
     margin: 0 auto;
-    padding: var(--pagePadding);
+    padding-left: var(--pagePadding);
 }
 
 main {
     overflow: hidden;
+    padding: var(--pagePadding);
 }
 
 main *:focus-visible {
